<resources>
    <string name="app_name">JDE_Demo</string>
    <string name="ais_server_url">AIS Server URL</string>
    <string name="next">Next</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="address_number">Address Number</string>
    <string name="sch_type">Sch Type</string>
    <string name="tax_id">Tax ID</string>
    <string name="alpha_name">Alpha Name</string>
    <string name="long_address">Long Address</string>
    <string name="no_data_found">No data found !</string>
</resources>
