<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:id="@+id/holdercard"
        android:layout_marginTop="@dimen/margin_low"
        android:layout_marginLeft="@dimen/margin_low"
        android:layout_marginRight="@dimen/margin_low"
        android:layout_marginBottom="@dimen/margin_low"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:layout_marginLeft="@dimen/margin_low"
                android:visibility="visible"
                android:id="@+id/checkorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                />

            <LinearLayout
                android:layout_toRightOf="@id/checkorder"
                android:layout_margin="@dimen/margin_low"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="2"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="2"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:weightSum="3"
                        >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/address_number"
                            android:gravity="center_horizontal"
                            />
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/sch_type"
                            android:gravity="center_horizontal"
                            />
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/tax_id"
                            android:gravity="center_horizontal"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:weightSum="3"
                        >
                        <TextView
                            android:id="@+id/addnum"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="201108"
                            android:textColor="@color/colorPrimary"
                            android:gravity="center_horizontal"
                            />
                        <TextView
                            android:id="@+id/schtype"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="E"
                            android:textColor="@color/colorPrimary"
                            android:gravity="center_horizontal"
                            />
                        <TextView
                            android:id="@+id/taxid"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="201108008"
                            android:textColor="@color/colorPrimary"
                            android:gravity="center_horizontal"
                            />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="@dimen/margin_low"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:weightSum="2"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:weightSum="2"
                        >
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/alpha_name"
                            android:gravity="center_horizontal"
                            />
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="@string/long_address"
                            android:gravity="center_horizontal"
                            />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:weightSum="2"
                        >
                        <TextView
                            android:id="@+id/alphaname"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="Arnold, Susan"
                            android:textColor="@color/colorPrimary"
                            android:gravity="center_horizontal"
                            />
                        <TextView
                            android:id="@+id/longaddress"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:text="National Express"
                            android:textColor="@color/colorPrimary"
                            android:gravity="center_horizontal"
                            />


                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>